added contact form

--- a/sandramohammed.html
+++ b/sandramohammed.html
@@ -1,29 +1,138 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>my portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style/styles.css">
 </head>
 <body>
-    <header>
-        <h1>OLAERE SANDRA MOHAMMED</h1>
-        <P> 
-            <i>Goal Oriented Focus, Patient, Empathetic, Passionately Communicative, Attentive, <br> Product knowledge, Time Management Skills, Acting Skills and Willingness to Learn.</i> 
-        </P>
-        <div>
-            <a href="#">Skills</a> 
-            <a href="#">Experience</a>
-            <a href="#">Education</a>
-            <a href="#">Certificate/Trainings</a>
-            <a href="#">Contact</a>
+    <div class="welcome-head">
+        <h3 class="greeting">nice to meet you!</h3>
+        <h2 class="name">i am sandra mohammed</h2>
+    </div>
+    <div class="container-two">
+        <div class="profile-box">
+            <p class="profile">Goal Oriented Focus, Patient, Empathetic, Passionately Communicative, Attentive, Product knowledge, Time Management Skills, Acting Skills and Willingness to Learn.</p>
         </div>
-</header>
-<hr>
-<div>
-    <img src="https://res.cloudinary.com/sandyahmed/image/upload/v1566678987/profile_pix_laewrv.jpg" alt="" width="300" height="300">
-</div>
-<hr>
+        <div class="avatar"></div>
+    </div>
+    <div class="mid-section">
+        <div class="left-mid">
+            <div class="experience-card">
+                <h5 class="card-name">experience</h5>
+                <ul class="exp-list">
+                    <li class="exp1">
+                        <h4 class="exp">customer support</h4>
+                        <h6 class="office">Whogohost Limited, Lagos State, Nigeria.</h6>
+                        <p class="date">September 2017 – November 2018</p>
+                        <ul class="work-list">
+                            <li class="list">Maintained a positive, empathetic and professional attitude toward customers at all times.</li>
+                            <li class="list">Responded promptly to customer inquiries.</li>
+                            <li class="list">Communicated with over 40,000 customers through various channels.</li>
+                            <li class="list">Knew upto 85% of our products inside and out so that i could answer questions.</li>
+                            <li class="list">Ensured customer satisfaction and provide professional customer support.</li>
+                        </ul>
+                    </li>
+                    <li class="exp2">
+                        <h4 class="exp">customer service/customer service sale/marketing executive</h4>
+                        <h6 class="office">Jamel Aluminum Roofing, Cross River State, Nigeria.</h6>
+                        <p class="date">May 2015 - January 2017</p>
+                        <ul class="work-list">
+                            <li class="list">Maintaining a positive, empathetic and professional attitude toward customers at all times.</li>
+                            <li class="list">Responding promptly to customer inquiries.</li>
+                            <li class="list">Communicating with customers through various channels.</li>
+                            <li class="list">Acknowledging and resolving customer complaints.</li>
+                            <li class="list">Knowing our products inside and out so i'm able to assist better.</li>
+                        </ul>
+                    </li>
+                    <li class="exp3">
+                        <h4 class="exp">assistant secretary</h4>
+                        <h6 class="office">Rural Urban Development Agency, Cross River State (NYSC)</h6>
+                        <p class="date">December 2013 – November 2014</p>
+                        <ul class="work-list">
+                            <li class="list">Picked calls and booked appointments for the Program Manager.</li>
+                            <li class="list">Schedule meetings and took down the minutes of the meetings.</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="skill-card">
+                <h5 class="card-name">skills</h5>
+                <ul class="skill-list">
+                    <li class="skill">Customer Support</li>
+                    <li class="skill">Admimstrative</li>
+                    <li class="skill">Digital Marketing</li>
+                    <li class="skill">Team Work</li>
+                    <li class="skill">Time management</li>
+                    <li class="skill">Good Commucation</li>
+                    <li class="skill">Organization Skills</li>
+                    <li class="skill">HTML</li>
+                    <li class="skill">CSS</li>
+                </ul>
+            </div>
+        </div>
+        <div class="right-mid">
+            <div class="edu-card">
+                <h5 class="card-name">education</h5>
+                <ul class="edu-list">
+                    <li class="edu">
+                        <h4 class="edu-name">Niger Delta University, Wilberforce Island, Bayelsa State</h4>
+                        <h6 class="edu-degree">Bachelor of Arts [B.A.] Theatre Arts / Media Communication.</h6>
+                        <p class="date">February 2009 –June 2013</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="cert-card">
+                <h5 class="card-name">certifications</h5>
+                <ul class="cert-list">
+                    <li class="cert">
+                        <h4 class="cert-name">Digital Marketing Internship</h4>
+                        <h6 class="issuer">Start.ng HNG</h6>
+                        <p class="date">(ongoing)</p>
+                    </li>
+                    <li class="cert">
+                        <h4 class="cert-name">Digital Skills for Africa</h4>
+                        <h6 class="issuer">Google</h6>
+                        <p class="date">(ongoing)</p>
+                    </li>
+                    <li class="cert">
+                        <h4 class="cert-name">UI/UX Design course</h4>
+                        <h6 class="issuer">Udemy</h6>
+                        <p class="date">(ongoing)</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="contact-card">
+                <h5 class="card-name">contact me</h5>
+                <ul class="contact-list">
+                    <li class="contact">
+                        <a href="https://github.com/sandyahmed" target="_blank"><img src="img/github-logo.png" alt="" width="32"></a>
+                    </li>
+                    <li class="contact">
+                        <a href="https://www.linkedin.com/in/olaere-sandra-mohammed-65385096/" target="_blank"><img src="img/linkedin.png" alt="" width="32"></a>
+                    </li>
+                    <li class="contact">
+                        <a href="https://twitter.com/Happychildsally" target="_blank"><img src="img/twitter.png" alt="" width="32"></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="msg-card">
+                <h5 class="card-name">send a message</h5>
+                <form action="" method="POST">
+                    <input type="text" name="fullname" class="text-field" placeholder="Full Name" required pattern=".{4,}" title="4 characters minimum">
+                    <input type="email" name="email" class="text-field" placeholder="Email Address" required>
+                    <input type="text" name="title" class="text-field" placeholder="Message Title" required pattern=".{4,}" title="4 characters minimum">
+                    <textarea name="textarea" id="msg-box" cols="30" rows="5" placeholder="Type your message..." required pattern=".{20,}" title="20 characters minimum"></textarea>
+                    <input type="submit" name="submit" class="submit-btn" value="Submit"> 
+                </form>
+            </div>
+        </div>
+    </div>
+    
+<!-- <div>
+    
 <div>
     <h3>Skills</h3>
     <ol>
@@ -97,6 +206,7 @@
     <a href="https://github.com/sandyahmed" target="_blank"><img src="img/github-logo.png" alt="" width="32"></a>
     <a href="https://www.linkedin.com/in/olaere-sandra-mohammed-65385096/" target="_blank"><img src="img/linkedin.png" alt="" width="32"></a>
     <a href="https://twitter.com/Happychildsally" target="_blank"><img src="img/twitter.png" alt="" width="32"></a>
-</footer>
+</p>
+</footer> -->
 </body>
 </html>
